`Fixed typo in Testimonials page and updated navigation items`

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LMS Admin</title>
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/720/720255.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
