`feat: updated AboutCompany page with new features and design changes`

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LMS Admin</title>
-    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/720/720255.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://th.bing.com/th/id/R.1a551aa4cba59342dff2decfbaa9c8dd?rik=KQTDhx1ZUAAfjA&riu=http%3a%2f%2fpluspng.com%2fimg-png%2flogo-template-png-logo-templates-1655.png&ehk=9MRokJPqMM6lr6AsMn50qqBGQgGuPYXFuTzMFbKjOa8%3d&risl=&pid=ImgRaw&r=0" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
